# services/authentication-service/openapi.json
@@ -91,6 +91,13 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "response_mode",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "operationId": "AppleLoginController.appleCallback"
@@ -184,7 +191,7 @@
         },
         "parameters": [
           {
-            "name": "code",
+            "name": "response_mode",
             "in": "query",
             "schema": {
               "type": "string"
@@ -300,6 +307,13 @@
           },
           {
             "name": "session_state",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "response_mode",
             "in": "query",
             "schema": {
               "type": "string"
@@ -493,6 +507,13 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "response_mode",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "operationId": "CognitoLoginController.cognitoCallback"
@@ -596,6 +617,13 @@
           },
           {
             "name": "state",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "response_mode",
             "in": "query",
             "schema": {
               "type": "string"
@@ -747,6 +775,13 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "response_mode",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "operationId": "GoogleLoginController.googleCallback"
@@ -812,6 +847,13 @@
           },
           {
             "name": "state",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "response_mode",
             "in": "query",
             "schema": {
               "type": "string"
@@ -919,6 +961,13 @@
           },
           {
             "name": "state",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "response_mode",
             "in": "query",
             "schema": {
               "type": "string"
